edited display panel and 0 button, fixed button alignment

--- a/src/LESS/buttons.less
+++ b/src/LESS/buttons.less
@@ -15,7 +15,11 @@ button {
 }
 
 .number-button {
-  background-color: #0C4081
+  background-color: #0C4081;
+  &:nth-child(10) {
+    width: 8.75rem;
+    border-radius: 30px;
+  }
 }
 
 .operator-button {
