--- a/src/LESS/containerDisplay.less
+++ b/src/LESS/containerDisplay.less
@@ -9,8 +9,8 @@
 .display {
   margin-top: 25px;
   margin-bottom: 15px;
-  height: 100px;
-  width: 450px;
+  height: 65px;
+  width: 275px;
   border-radius: 50px;
   color: white;
   background-color: #322c2d;
@@ -19,5 +19,5 @@
   justify-content: flex-end;
   align-items: flex-end;
   padding-right: 8%;
-  font-size: 5.0rem;
+  font-size: 3.5rem;
 }
